# faproject

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/crud/: todo.py
app/models/: todo.py
app/routers/: todo.py
app/schemas/: todo.py
app/static/: index.html
app/static/js/: app.js
